--- a/style_mezat.css
+++ b/style_mezat.css
@@ -1,30 +1,44 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
-}
-#website_name{
-    color: #FFC107;
+    box-sizing: border-box;
 }
 
-ul {
+/* anasayfa navbar css kısımları */
+body {
+    width: 100%;
+    justify-content: space-around;
+    /*   space-around: Bu özellik, öğeleri yatayda eşit aralıklarla hizalar ve öğelerin kenar
+     boşluklarını (padding) ve kenar çizgilerini (border) de hesaba katar. */
+     align-items: center;
+     background-color: #FFC107;
+}
+
+.navbar-ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background: #09350fb6;
 }
-td{
+
+td {
     padding-bottom: 1rem;
     margin-bottom: 1rem;
-    width:auto;
+    width: auto;
+    
 }
-td input{
+
+td input {
     padding-bottom: 1rem;
     width: 20rem;
     background-color: #4f6f5417;
-    
+
 }
+
 li {
     float: left;
     font-size: 24px;
@@ -36,6 +50,11 @@ li a {
     color: #D2E0FB;
     text-decoration: none;
 }
-li a:hover{
-    color:#FFC107;
+#website_name{
+    color: #FFC107;
+}
+
+
+li a:hover {
+    color: #FFC107;
 }
